--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
 
     <meta charset="UTF-8">
     <title>😀hello</title>
-
+<link rel="stylesheet" href="style.css">
+    
 </head>
+
 <body>
 <img src="./education.png" alt="education image" height="150px" width="150px">
-   <h2><strong>Education</strong> english words</h2>
-   <h3><em>english words and phrase about </em><b>education</b></h3>
+   <h2 class="h22"><strong class="str">Education</strong> english words</h2>
+   <h3><em id="em33">english words and phrase about </em><b>education</b></h3>
 
    <ul>
     <li><a href="#">student</a></li>
     <li>teacher</li>
     <li>student</li>
    </ul>
-
+<hr>
    <ol start="1">  
     <li>book</li>
     <li>examp</li>
